--- a/requirements.txt
+++ b/requirements.txt
@@ -22,8 +22,8 @@ numpy
 opencv-python
 pillow==11.3.0
 psutil
-ntgcalls>=2.0.6
-py-tgcalls==2.2.6
+ntgcalls==2.0.5
+py-tgcalls==2.2.5
 pycryptodome
 pydub
 pyfiglet
