--- a/app.json
+++ b/app.json
@@ -37,6 +37,11 @@
         "value": "https://tubed.okflix.top",
         "required": true
       },
+       "YT_API_KEY": {
+        "description": "Get the Api Key from @Sid_Elite.",
+        "value": "",
+        "required": true
+      },
       "OWNER_ID": {
         "description": "The user id of user whom you would like to add as OWNER.",
         "value": "",
