--- a/requirements.txt
+++ b/requirements.txt
@@ -22,8 +22,8 @@ numpy
 opencv-python
 pillow==11.3.0
 psutil
-ntgcalls==2.0.5
-py-tgcalls==2.2.5
+ntgcalls==2.0.6
+py-tgcalls==2.2.6
 pycryptodome
 pydub
 pyfiglet
@@ -40,5 +40,5 @@ telegraph
 tgcrypto
 unidecode
 wget
-yt-dlp==2025.8.11
-git+https://github.com/CertifiedCoders/youtube-search-python.git@v1.6.6.post1
+yt-dlp==2025.8.20
+git+https://github.com/CertifiedCoders/youtube-search-python
